sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/Recurring_Service_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Recurring Service Line Item</label>
    <nameField>
        <displayFormat>RS-LI-{0000000}</displayFormat>
        <label>Recurring Service Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Service Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>