sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>The requesting company</description>
    <inlineHelpText>The requesting company</inlineHelpText>
    <label>Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>