sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipLabel>Recurring Service Line Items</relationshipLabel>
    <relationshipName>Recurring_Service_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>