sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/PR_Created__c.field-meta.xml
<CustomField>
    <fullName>PR_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PR Created</label>
    <type>Checkbox</type>
</CustomField>