sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/Procurement_Request__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procurement Request</label>
    <referenceTo>Procurement_Tracking_Sheet__c</referenceTo>
    <relationshipLabel>Recurring Service Line Items</relationshipLabel>
    <relationshipName>Recurring_Service_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>