sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Item</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Recurring Service Line Items</relationshipLabel>
    <relationshipName>Recurring_Service_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>