sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/Recurring_Service__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Service__c</fullName>
    <label>Recurring Service</label>
    <referenceTo>Recurring_Service__c</referenceTo>
    <relationshipLabel>Recurring Service Line Items</relationshipLabel>
    <relationshipName>Recurring_Service_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>