sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/Requesting_Company__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Company</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Recurring Service Line Items</relationshipLabel>
    <relationshipName>Recurring_Service_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>