sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/RS_Tag__c.field-meta.xml
<CustomField>
    <fullName>RS_Tag__c</fullName>
    <label>RS Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>