sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>The total price of all the Recurring Service PR Items</description>
    <inlineHelpText>The total price of all the Recurring Service PR Items</inlineHelpText>
    <label>Total Price</label>
    <summarizedField>Recurring_Service_PR_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Recurring_Service_PR_Item__c.Recurring_Service_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>