sfSandBoxCode/force-app/main/default/objects/Recurring_Service_Line_Item__c/fields/VAT_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>VAT_Inclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Inclusive?</label>
    <type>Checkbox</type>
</CustomField>